src/style.css
:root {
  --mainBlue: #04315a;
  --secondaryBlue: #8dadc2;
  --thirdBlue: #b3c8d4;
  --grey: #dadee0;
  --darkBlue: #03223f;
  --darkestBlue: #021628;
}



.navigationBar {
  background-color: var(--mainBlue);
  height: 100px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;

  .navTitle {
    color: white;
    margin: 0;
    padding-left: 30px;
  }
}

.the {
  font-weight: normal;
}

.buttonGroup {
  display: flex;
  margin-right: 28px;
}

.title {
 margin-bottom: 15px;
}

.selector {
  font-family: "Lato-Regular";
  font-style: normal;
  }

.body {
  background-color: white;
  opacity: 90%;
  margin: 120px 20%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  padding: 20px 70px;
  border-radius: 10px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
}

.searchContainer {
  overflow: hidden;
  display: flex;
  align-items: stretch; 
  box-shadow: 0 1px 2px black;
  border-radius: 8px;
  margin: 20px 0px 35px 0px;
  border: 1px solid #d1d5db;
  width: 100%;
  max-width: 500px; 
}

.searchContainer:hover {
  border-color: var(--mainBlue);
}

.searchContainer-error {
  border-color: red;
}

.login {
  width: 200px;
  display: flex;
  flex-direction: column;
}

.loginInput {
  margin-top: 10px;
  padding: 10px 16px;
  font-size: 14px;
  border: 1px solid #d1d5db;
  border-radius: 8px;
  outline: none;
  margin: 10px 0;
  transition: border-color 0.2s ease, box-shadow 0.2s ease;
}

.loginInput:focus {
  border-color: var(--mainBlue);
  box-shadow: 0 2px 6px var(--mainBlue);
}

.button {
  background-color: var(--mainBlue);
  border: none;
  color: white;
  font-size: 14px;
  padding: 10px 16px;
  border-radius: 8px;
  cursor: pointer;
  transition: background-color 0.2s ease;

  .fullArticleButton {
    align-self:center;
  }
}

.link {
  color: inherit;
  text-decoration: none;
}

.link:visited,
.link:hover,
.link:active {
  color: inherit;
  text-decoration: none;
}

.button:hover {
  background-color: var(--darkestBlue);
}

.button:active {
  background-color: var(--darkestBlue);
}

.loginInput:hover {
  background-color: var(--grey);
}

.button {
  margin-top: 20px;
}

.inputBar {
  width: 100%;
  padding: 12px 16px;
  font-size: 16px;
  border: none;
  outline: none;
  transition: border-color 0.2s ease, box-shadow 0.2s ease;
  flex: 1;
  border-right: 1px solid #d1d5db;

}

.inputBar:focus {
  border-color: var(--mainBlue);
  box-shadow: 0 2px 6px var(--mainBlue);
}

.inputBar:hover {
  border-color: #6b7280;
}

.inputBar-error {
  background-color: #fff5f5;
  box-shadow: 0 0 5px red;
}


.inputBar-error-text {
  color: red;
  font-size: 14px;
  margin-top: 5px;
}

.search-button {
  background-color: var(--mainBlue);
  border: none;
  color: white;
  font-size: 16px;
  padding: 12px 16px;
  cursor: pointer;
  transition: background-color 0.2s ease;
  display: flex;
  align-items: center;
  justify-content: center;
}

.search-button:hover {
  background-color: var(--darkBlue);
}

.search-button:active {
  background-color: var(--darkestBlue);
}

.loginButtonGroup {
  display: flex;
  flex-direction: column;
  margin-bottom: 20px;
}

.titleButton {
  all: unset;
  cursor: pointer;
  display: inline-block;
}

.titleButton:hover {
  all: unset;
  cursor: pointer;
}

.navIcon {
  width: 50px;
  height: 50px;
  fill: white;
  background-color: transparent;
  display: block;
  border: none;
  margin: 0px 2px;
}

.navIcon:hover {
  fill: var(--grey);
  background-color: transparent;
  cursor: pointer;
}

.summary{
  width: 70%;
  background-color: white;
  opacity: 90%;
  padding: 20px;
  box-sizing: border-box;
}

.profileContainer {
  max-width: 400px;
  margin: 100px auto;
  background-color: #ffffff;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
  border-radius: 12px;
  text-align: center;
  padding: 30px;
}

.profileContainer h1 {
  font-size: 26px;
  margin-bottom: 10px;
  color: #003366;
}

.profileContainer p {
  font-size: 18px;
  color: #555;
  margin-bottom: 20px;
}

.sideBarSummarycontainer {
  display: flex;
  height: 100vh;
  margin: 0;
  padding: 0;
  overflow: hidden;
}

.sidebar {
  flex: 0.45;
  background-color: var(--mainBlue); 
  opacity: 90%;
  padding: 20px;
  overflow-y: auto;
  .historyTitle{
    color: white; 
    margin: 0;
  }
}

.summaryView {
  flex: 1.55;
  background-color: white; 
  opacity: 90%;
  padding: 20px;
  overflow-y: auto;
  margin: 40px;
}

.historyTable {
  width: 100%;
  border-collapse: collapse;
}

.historyTable tr {
  cursor: pointer;
  transition: all 0.3s ease-in-out;
}

.historyTable td {
  padding: 14px 20px; 
  font-size: 16px;
  color: #e0e0e0;
  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
}

.historyTable tr:hover td {
  background-color: rgba(255, 255, 255, 0.15);
  transform: translateX(5px);
}

.historyTable .selected td {
  background-color: var(--secondaryBlue);
  color: #ffffff;
  font-weight: 600;
  border-left: 5px solid white;
}

.historyTitle {
  font-size: 28px;
  font-weight: 700;
  color: #ffffff;
  letter-spacing: 1px;
}

.historyHeader {
  display: flex;
  justify-content: space-between;
  align-items: center;
  border-bottom: 2px solid rgba(255, 255, 255, 0.2);
  background-color: rgba(0, 0, 0, 0.2);
  padding: 20px;
}

.newSummaryButton {
  background-color: var(--mainBlue);
  border: none;
  color: white;
  font-size: 14px;
  padding: 10px 16px;
  border-radius: 12px;
  cursor: pointer;
  transition: background-color 0.2s ease;
}

.historyViewContainer {
  background-color: var(--mainBlue);
  border-radius: 8px;
  overflow: hidden;
  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
}

.errorMessage {
  color: red;
  font-size: 12px;
  margin-bottom: 0px;
}

